# sec-insights

./: .gitignore  2家公司的主营利润是多少.json  FAQ.md  README.md  package-lock.json  render.yaml  setenv.sh  最大的风险是什么？.json
.devcontainer/: Dockerfile  README.md  devcontainer.json  docker-compose.workspace.yaml  docker-compose.workspace.yml  post_create_command.sh
backend/: .env.development  .env.docker  .gitignore  .pylintrc  Dockerfile  Makefile  README.md  TROUBLESHOOTING.md  alembic.ini  cors-config.json  docker-compose.yml  localstack-cors-config.json  pyproject.toml  test_download.py  test_s3.py  troubleshooting.md  wait-for-db.py
backend/alembic/: env.py
backend/alembic/versions/: 1b0b616e08c6_replace_value_within_.py  477cee72edc4_init_tables.py  663b3fea3024_update_sub_process_columns.py  873c0c4616ea_add_foreign_key_indices.py  90a1d6a26343_create_doc_tables.py  c008bb4f3f48_update_sub_process_columns.py  ee73fc803704_cascade_commit.py
backend/app/: debug_app.py  llama_index_settings.py  loader_io.py  main.py  schema.py
backend/app/api/: api.py  crud.py  deps.py
backend/app/api/endpoints/: conversation.py  documents.py  health.py
backend/app/chat/: constants.py  engine.py  messaging.py  pg_vector.py  qa_response_synth.py  tools.py  utils.py
backend/app/core/: config.py
backend/app/db/: base.py  session.py  wait_for_db.py
backend/app/models/: base.py  db.py
backend/files/: README.md
backend/files/sec-edgar-filings/0001018724/10-K/0001018724-21-000004/: primary-document.html
backend/files/sec-edgar-filings/0001018724/10-K/0001018724-22-000005/: primary-document.html
backend/files/sec-edgar-filings/0001018724/10-K/0001018724-23-000004/: primary-document.html
backend/files/sec-edgar-filings/0001326801/10-K/0001326801-21-000014/: primary-document.html
backend/files/sec-edgar-filings/0001326801/10-K/0001326801-22-000018/: primary-document.html
backend/files/sec-edgar-filings/0001326801/10-K/0001326801-23-000013/: primary-document.html
backend/scripts/: build_vector_tables.py  chat_llama.py  debug_seed_db.py  dedupe_vector_store.py  download_sec_pdf.py  file_utils.py  seed_db.py  seed_storage_context.py  stock_utils.py  upsert_db_sec_documents.py  upsert_document.py  upsert_s3.py
backend/tests/app/chat/: test_engine.py
docs/: resources.md  steps.md
frontend/: .env.example  README.md  next.config.mjs  package-lock.json  package.json  sentry.client.config.ts  sentry.edge.config.ts  sentry.server.config.ts  tailwind.config.ts
frontend/.devcontainer/: devcontainer.json
frontend/src/: config.js  constants.tsx  env.mjs
frontend/src/api/: backend.tsx
frontend/src/components/: Layout.tsx
frontend/src/context/: pdf.tsx
frontend/src/hooks/: useDocumentSelector.tsx  useMessages.tsx  useMultiplePdfs.tsx  usePdfViewer.tsx
frontend/src/modules/: react-pdf.d.ts
frontend/src/pages/: _app.tsx  _document.tsx  _error.tsx  index.tsx
frontend/src/styles/: globals.css  react-select.tsx
frontend/src/svgs/: llama.tsx  right-arrow.tsx
(+30 files in other folders)
