[tool.poetry]
name = "llama-app-backend"
version = "0.1.0"
description = "Backend for Llama App"
authors = ["Sourabh Desai <sourabhdesai@gmail.com>"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.11,<3.12"
fastapi = "0.115.11"
pydantic = "^2.9.2"
uvicorn = "^0.22.0"
sqlalchemy = {extras = ["async"], version = "^2.0.15"}
aiosqlite = "^0.19.0"
asyncpg = "^0.29.0"
alembic = "^1.11.1"
psycopg2 = {extras = ["binary"], version = "^2.9.6"}
psycopg2-binary = "^2.9.6"
sse-starlette = "^1.6.1"
pypdf = "^5.3.1"
anyio = "^3.7.0"
s3fs = "^2023.6.0"
fsspec = "^2023.6.0"
pdfkit = "^1.0.0"
pgvector = "^0.3.6"
sentry-sdk = {extras = ["fastapi"], version = "^1.28.1"}
llama-index-core = "0.12.23"
polygon = "^1.2.6"
polygon-api-client = "^1.14.4"
nltk = "^3.8.1"
cachetools = "^5.3.1"
greenlet = "^2.0.2"
email-validator = "^2.0.0.post2"
pydantic-settings = "^2.8.1"
openai = "^1.66.2"
llama-index-vector-stores-postgres = "^0.4.2"
llama-index-embeddings-openai = "^0.3.1"
llama-index-readers-file = "^0.4.6"
llama-index-llms-openai = "^0.3.25"
llama-index-agent-openai = "^0.4.6"
llama-index-question-gen-openai = "^0.3.0"


[tool.poetry.group.dev.dependencies]
pylint = "^2.17.4"
pytest = "^7.3.2"
sseclient-py = "^1.7.2"
pdfkit = "^1.0.0"
fire = "^0.5.0"
sec-edgar-downloader = "~5.0"
pytickersymbols = "^1.13.0"
awscli-local = "^0.20"
llama-index-callbacks-arize-phoenix = "^0.4.0"
arize-phoenix = "^8.12.1"

[tool.poetry.scripts]
start = "app.main:start"
migrate_db = "app.main:migrate_db"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
